# rust-mysql-demo

./: .env  Cargo.toml  README.md
migrations/2022-07-27-152217_create_posts/: up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
src/config/: database.rs
src/route/: mod.rs  test_route.rs
src/service/: ping_service.rs
