[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"
default-run = "diesel_demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.4", features = ["mysql"] }
dotenv = "0.15.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"