[package]
name = "diesel_demo"
version = "0.1.0"
edition = "2021"
default-run = "diesel_demo"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html 
#https://github.com/naimazizi/demo-actix/blob/master/Cargo.toml

[dependencies]
diesel = { version = "1.4", features = ["r2d2","mysql"] }
dotenv = "0.15.0"
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
env_logger = "0.8.2"
chrono = "0.4.9"